5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1815_2565.log
== TEST (2019-06-12 12:28:50) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0

for i in range(size(nota)):
	 if	(nota[i] >= 5 and frequencia[i] > carga*(75/100)):
				a1 = a1 + 1
				
		elif	(nota[i] >= 5 and frequencia[i] < carga*(75/100)):
				a2 = a2 + 1
		
		elif	(nota[i] < 5 ):
				a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
File "XXXX", line 15
    elif	(nota[i] >= 5 and frequencia[i] < carga*(75/100)):
                                                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:29:01) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0

for i in range(size(nota)):
	 if	(nota[i] >= 5 and frequencia[i] > carga*(75/100)):
				a1 = a1 + 1
				
		elif(nota[i] >= 5 and frequencia[i] < carga*(75/100)):
				a2 = a2 + 1
		
		elif	(nota[i] < 5 ):
				a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
File "XXXX", line 15
    elif(nota[i] >= 5 and frequencia[i] < carga*(75/100)):
                                                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:29:36) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0

for i in range(size(nota)):
	 if	(nota[i] >= 5 and frequencia[i] > carga*(75/100)):
			a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < carga*(75/100)):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
File "XXXX", line 15
    elif (nota[i] >= 5 and frequencia[i] < carga*(75/100)):
                                                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:30:38) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0

for i in range(size(nota)):
		if	(nota[i] >= 5 and frequencia[i] > carga*(75/100)):
			a1 = a1 + 1
				
		elif (nota[i] >= 5 and frequencia[i] < carga*(75/100)):
				a2 = a2 + 1
		
		elif	(nota[i] < 5 ):
				a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:31:44) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
		if	(nota[i] >= 5 and frequencia[i] > n):
			a1 = a1 + 1
				
		elif (nota[i] >= 5 and frequencia[i] < n):
				a2 = a2 + 1
		
		elif	(nota[i] < 5 ):
				a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:39) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] => 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] => 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
File "XXXX", line 12
    if	(nota[i] => 5 and frequencia[i] > n):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:32:50) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:33:03) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:33:10) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frenquencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:34:23) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:34:31) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a2 = a2 + 1
		
	elif	(nota[i] < 5 ):
			a3 = a3 + 1
				
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:36:14) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:36:58) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	a[0] = a1
	a[1] = a3
	a[2] = a2
print(a)
-- EXECUTION TIME:
0.990557
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
Digite as notas: Digite as frequencias: carga horaria: [4 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:37:01) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	a[0] = a1
	a[1] = a3
	a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:39:48) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:40:04) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:42:05) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (nota[i] >= 5 and frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:03) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] > n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- EXECUTION TIME:
0.933305
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
0
1
2
3
4
[1 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
0
1
2
3
4
5
6
[4 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
0
1
2
3
4
5
6
7
8
9
[4 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:33) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- EXECUTION TIME:
1.17859
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
0
1
2
3
4
[2 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
0
1
2
3
4
5
6
[5 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
0
1
2
3
4
5
6
7
8
9
[5 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:44:40) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- EXECUTION TIME:
0.856857
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
0
1
2
3
4
[2 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
0
1
2
3
4
5
6
[5 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
0
1
2
3
4
5
6
7
8
9
[5 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:44:40) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a3
a[2] = a2
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:45:13) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:45:20) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:45:37) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	print(i)
	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- EXECUTION TIME:
1.12162
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
0
1
2
3
4
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
0
1
2
3
4
5
6
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
0
1
2
3
4
5
6
7
8
9
[5 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:45:54) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				

	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- EXECUTION TIME:
1.16907
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:46:06) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- EXECUTION TIME:
0.802742
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:46:14) 
-- CODE:
from numpy import*

nota = array(eval(input("Digite as notas: ")))
frequencia = array(eval(input("Digite as frequencias: ")))
carga = int(input("carga horaria: "))
a = zeros(3, dtype=int)
a1 = 0
a2 = 0
a3 = 0
n = carga*(75/100)
for i in range(size(nota)):
	if	(nota[i] >= 5 and frequencia[i] >= n):
		a1 = a1 + 1
				
	elif (frequencia[i] < n):
			a3 = a3 + 1
		
	elif	(nota[i] < 5 ):
			a2 = a2 + 1
				
	
a[0] = a1
a[1] = a2
a[2] = a3
print(a)
-- EXECUTION TIME:
0.969449
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
